	- "B" releases are "Major Minor Releases" - Cool new features + rewrites, sometimes prone to issues due to new code.
	- "C" releases are "Minor Releases" - Contain bug fixes and improvements to code

********************************************************

Version 2.1.2
	- New - Callout Options (alignment, CSS button)
	- New - Facebook Like Image uses 'Featured Image' (if available)

Version 2.1.1
	- Bugs - IE8 <img> css
	- Section Tweaks - Highlight

Version 2.1
	- NEW - Global default meta options
	- NEW - BuddyPress and bbPress Extensions
	- NEW - Sharebar Section Rewrite (dynamic buttons)
	- NEW - Hashtag option (Used in social media)
	- NEW - Dynamic search field (CSS3 Search Field)
	- NEW - Sidebar load priority
	- NEW - Widget - Special Recent Posts
	- CORE - Color handling system
	- CORE - Meta defaults
	- CORE - Updates LESS system
	- CORE - Custom CSS now loaded last
	- CORE - New debug system
	- CORE - New template naming
	- Bugs - Better license handling
	- Bugs - Fix importer trying to set a null array
	- Bugs - Category is not an archive
	- Bugs - Use main layout for posts/pages
	- Bugs - JS not loading for a clone.
	- Store - Better filesystem handling 100% WP functionality
	- Twitter Section - @ and # links made clickable
	- PostNav Section - Allow cloning
	- Feature Section - New sort functions + all posts
	- Boxes Section	  - New sort functions
-------------------------------------

Version 2.0.2
	- Template Name Convention Change
	- Modifications for free version
------------------------------------- 

Version 2.0.1
	- Feature Section
		- Responsive Background Images!
		- Bug fix - Meta on blog page
		- Better background handling
		- Posts category mode, uses featured images
	- Carousel Section - Taxonomy select, tweaks
	- Performance - Post Saving - Changed hook
	- Multisite - Added support for 'blogs' folder in customize plugin
	- Bugs - Remove css3 media queries js ( broken )
	- Features - Category mode now pulls in featured image