@@ -14,6 +14,8 @@
 Version 2.1.2
 	- New - Callout Options (alignment, CSS button)
 	- New - Facebook Like Image uses 'Featured Image' (if available)
+	- New - Advanced option - Current Install <body> class
+	- New - Boxes options - More link & individual class
 
 Version 2.1.1
 	- Bugs - IE8 <img> css
